[Refactor] 레시피 이미지 순서 정합성을 위한 구조 개선